--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Word Up!</title>
@@ -13,9 +14,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="sha384-2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
 
     <!-- our CSS -->
-    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/styles.css" />
 
 </head>
+
 <body>
 
     <h1 class="jumbotron">Word Up!</h1>
@@ -44,6 +46,7 @@
             <!-- TODO 1
             Make a "New Game" button
             -->
+            <button id="new-game-button" class="btn btn-primary">New Game</button>
         </section>
 
         <!-- things that should not show up until the (first) game has started -->
@@ -52,15 +55,17 @@
             <!-- TODO 4
             Add some instructions so the user knows what to do.
             -->
+            <p>Spell as many words as you can, using only these letters</p>
 
             <!-- TODO 5
             Make an empty container to hold the letter chips.
             -->
+            <div id="allowed-letters"></div>
 
             <!-- the form via which the user attempts to submit new words -->
             <form id="word-attempt-form">
                 <!-- the actual text box where the user types -->
-                <input type="text" id="textbox"/>
+                <input type="text" id="textbox" />
 
                 <br>
                 <!-- red feedback chips will be injected here -->
